--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "author": "Asybel B.P. Sianipar",
   "license": "MIT",
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/node": "^20.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "chalk": "^5.4.1"
   }
 }
