--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/chalk": "^0.4.31",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
